--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     {% load static %}
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>阿星的小站</title>
     <!-- 静态资源引用 -->
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'blog/css/main.css' %}">
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="{% static 'blog/js/main.js' %}"></script>
 </head>
 <body>
     <div class="container">
         <!-- 头部导航 -->
         <header>
             <!-- 电脑模式导航 -->
-            <hgroup class="d-none d-sm-block">
+            <hgroup class="d-none d-sm-block" style="padding-top: 15px;">
                 <nav>
                     <ul class="nav nav-pills float-right">
                         <li class="nav-item"><a href="." class="nav-link active">首页</a></li>
@@ -28,11 +24,33 @@
                     </ul>
                 </nav>
                 <h3><a href="."><img src="{% static 'blog/img/logo.png' %}"/></a></h3>
+                <hr>
             </hgroup>
             <!-- 移动端导航 -->
-            <hgroup class="d-sm-none">这是移动端导航</hgroup>
+            <hgroup class="bg-dark">
+                <nav class="d-sm-none navbar navbar-dark navbar-expand-md">
+                    <a href="." class="navbar-brand">阿星的小站</a>
+                    <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#headlist" aria-expanded="false" aria-controls="headlist">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>                
+                </nav>
+                <div class="collapse navbar-collapse" id="headlist">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">1</li>
+                        <li class="nav-item">2</li>
+                        <li class="nav-item">3</li>
+                    </ul>
+                </div>
+            </hgroup>
         </header>
         
     </div>
+
+    <!-- bootstrap相关js文件 -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="{% static 'blog/js/main.js' %}"></script>
 </body>
+
 </html>
