--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -16,33 +16,39 @@
             <!-- 电脑模式导航 -->
             <hgroup class="d-none d-sm-block" style="padding-top: 15px;">
                 <nav>
-                    <ul class="nav nav-pills float-right">
+                    <ul class="nav nav-pills float-right" style="padding: 10px;">
                         <li class="nav-item"><a href="." class="nav-link active">首页</a></li>
                         {% for category in CategoryList %}
                         <li class="nav-item"><a href="." class="nav-link">{{category.name}}</a></li>
                         {% endfor %}
                     </ul>
                 </nav>
-                <h3><a href="."><img src="{% static 'blog/img/logo.png' %}"/></a></h3>
+                <h3><a href="."><img style="height: 64px;" src="{% static 'blog/img/logo.png' %}"/></a></h3>
                 <hr>
             </hgroup>
             <!-- 移动端导航 -->
-            <hgroup class="bg-dark">
-                <nav class="d-sm-none navbar navbar-dark navbar-expand-md">
+            <hgroup class="bg-light">
+                <nav class="d-sm-none navbar navbar-light navbar-expand-md">
                     <a href="." class="navbar-brand">阿星的小站</a>
                     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#headlist" aria-expanded="false" aria-controls="headlist">
                         <span class="navbar-toggler-icon"></span>
                     </button>                
                 </nav>
-                <div class="collapse navbar-collapse" id="headlist">
+                <div class="collapse navbar navbar-collapse" id="headlist">
                     <ul class="navbar-nav">
-                        <li class="nav-item">1</li>
-                        <li class="nav-item">2</li>
-                        <li class="nav-item">3</li>
+                        {% for category in CategoryList %}
+                        <li class="nav-item"><a href="." class="nav-link" style="color:rgba(0,0,0.9);">{{category.name}}</a></li>
+                        {% endfor %}
                     </ul>
                 </div>
             </hgroup>
         </header>
+        
+        <!-- 主体 -->
+        <div class="row tbody">
+            <div class="col-md-8">左边</div>
+            <div class="col-md-4">右边</div>
+        </div>
         
     </div>
 
