--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -1,10 +1,11 @@
 {% load static %}
 <div class="card">
     <div class="card-header">Hello</div>
-    <figure class="figure text-center card-body">
+    <figure class="figure float-left card-body">
         <img src="{% static 'blog/img/头像.jpg' %}" alt="头像" class="img-fluid rounded" style="width:35%;">
         <figcaption class="figure-caption">{{user.username}}</figcaption>
     </figure>
+    <p>这是什么</p>
 </div>
 <h5>文章分类</h5>
 <p style="line-height: 2rem;">
