调整网页结构

--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -50,7 +50,11 @@
             <div class="col-md-8">{% block content %}{% endblock %}</div>
             <div class="col-md-3">{% include "blog/sidebar.html" %}</div>
         </div>
-        
+        <hr>
+        <!-- 尾部 -->
+        <footer class="text-center">
+            {% include "blog/footer.html" %}
+        </footer>
     </div>
 
     <!-- bootstrap相关js文件 -->
