--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,4 +1,21 @@
 {% extends "blog/layout.html" %}
 {% block content %}
-这是主体
+{% for article in ArticleList %}
+<article class="row">
+    <div class="col-md-5">
+        <a href="."><img src="{{article.cover}}" alt="{{article.title}}" class="img-thumbnail"></a>
+    </div>
+    <div class="col-md-7">
+        <h5><strong><a href=".">{{article.title}}</a></strong></h5>
+        <p class="info"><small><author><a href="">{{article.author.username}}</a></author><span> • </span><time>{{article.createTime}}</time>
+        {% ifequal user article.author %}
+            <span> • </span><a href=".">编辑</a>
+        {% endifequal %}
+        </small>
+        </p>
+        <p><small>{{article.info}}</small></p>
+    </div>
+</article>
+<hr>
+{% endfor %}
 {% endblock %}
