--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -1,10 +1,15 @@
 {% load static %}
 <div class="card">
     <div class="card-header">Hello</div>
-    <figure class="figure text-center card-body">
-        <img src="{% static 'blog/img/头像.jpg' %}" alt="头像" class="img-fluid rounded" style="width:35%;">
-        <figcaption class="figure-caption">{{user.username}}</figcaption>
-    </figure>
+    <div class="row">
+        <div class="col-md">
+            <figure class="figure card-body">
+                <img src="{% static 'blog/img/头像.jpg' %}" alt="头像" class="img-fluid rounded">
+                <figcaption class="figure-caption">{{user.username}}</figcaption>
+            </figure>
+        </div>
+        <p class="text-info col-md"><span style="line-height: 100px;">注销登录</span></p>
+    </div>
 </div>
 <h5>文章分类</h5>
 <p style="line-height: 2rem;">
