--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -1,16 +1,31 @@
 {% load static %}
+{% if user.is_authenticated %}
 <div class="card">
     <div class="card-header">Hello</div>
     <div class="row">
         <div class="col-md">
-            <figure class="figure card-body">
-                <img src="{% static 'blog/img/头像.jpg' %}" alt="头像" class="img-fluid rounded">
-                <figcaption class="figure-caption">{{user.username}}</figcaption>
+            <figure class="figure card-body text-center">
+                <img src="{% static 'blog/img/头像.jpg' %}" alt="头像" class="img-fluid rounded" style="width: 60%;">
+                <figcaption class="figure-caption text-center">
+                    <form id="logoutForm" action="logout/" method="post" class="navbar-right">
+                    {% csrf_token %}
+                        <a class="" type="submit" onclick="document.getElementById('logoutForm').submit()">退出</a>
+                    </form>
+                </figcaption>
             </figure>
         </div>
-        <p class="text-info col-md"><span style="line-height: 100px;">注销登录</span></p>
+        
     </div>
 </div>
+{% else %}
+<div class="card">
+    <div class="card-header">Hello</div>
+        <figure class="figure card-body">
+            <img src="{% static 'blog/img/welcome.png' %}" alt="头像" class="img-fluid rounded">
+            <figcaption class="figure-caption text-center">欢迎</figcaption>
+        </figure>
+</div>
+{% endif %}
 <h5>文章分类</h5>
 <p style="line-height: 2rem;">
 {% for category in CategoryList %}
