--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -26,14 +26,14 @@
         </figure>
 </div>
 {% endif %}
-<h5>文章分类</h5>
-<p style="line-height: 2rem;">
+<h5 class="text-info">文章分类</h5>
+<p>
 {% for category in CategoryList %}
 <a href="." class="btn btn-light">{{category.name}}</a>
 {% endfor %}
 </p>
-<h5>标签</h5>
-<p style="line-height: 2rem;">
+<h5 class="text-info">标签</h5>
+<p>
 {% for category in CategoryList %}
 <a href="." class="btn btn-light">{{category.name}}</a>
 {% endfor %}
