--- a/blog/static/blog/css/main.css
+++ b/blog/static/blog/css/main.css
@@ -1,6 +1,25 @@
 @media (max-width: 768px) {
-    .container {
-      padding-left: 0;
-      padding-right: 0;
-    }
+  .container {
+    padding-left: 0;
+    padding-right: 0;
   }
+}
+
+body{
+  background-color: #f2f2f2;
+}
+header{
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 15px;
+}
+.content{
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding-top:30px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.content img{
+  max-width:100% !important;
+}
