--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,19 +2,19 @@
 {% load static %}
 {% block content %}
 {% for article in ArticleList %}
-<article class="row">
-    <div class="col-md-5">
+<article class="row content">
+    <div class="col-5">
         <a href="{% url 'showPost' article.id %}"><img src="{{article.cover}}" alt="{{article.title}}" class="img-thumbnail"></a>
     </div>
-    <div class="col-md-7">
+    <div class="col-7">
         <h5><strong><a href="{% url 'showPost' article.id %}">{{article.title}}</a></strong></h5>
         <p class="info"><small><author><a href="">{{article.author.username}}</a></author><span> • </span><time>{{article.createTime}}</time>
         </small>
         </p>
-        <p><small>{{article.info}}</small></p>
+        <p class="d-none d-sm-block"><small>{{article.info}}</small></p>
     </div>
 </article>
-<hr>
+<br>
 {% endfor %}
 <!-- 分页 -->
 <nav aria-label="Page navigation example">
