--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,10 +1,12 @@
 {% extends "blog/layout.html" %}
 {% block content %}
+<article class="content" style="padding: 2rem;">
 <h3 class="text-primary">{{article.title}}</h3>
 <p class="info">
     <a href=".">{{article.author.username}}</a><span> | &nbsp;分类：</span><a href=".">{{article.category}}</a><span> |&nbsp;更新于：</span><time>{{article.updateTime}}</time>
 </p>
-<article>
+<section>
     {{article.body|safe}}
+</section>
 </article>
 {% endblock %}
