完善分类页面中

--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -34,7 +34,7 @@
 </p>
 <h5 class="text-info">标签</h5>
 <p>
-{% for category in CategoryList %}
-<a href="." class="btn btn-light">{{category.name}}</a>
+{% for tag in TagList %}
+<a href="." class="btn btn-light">{{tag.name}}</a>
 {% endfor %}
 </p>
