--- a/blog/static/blog/css/main.css
+++ b/blog/static/blog/css/main.css
@@ -20,18 +20,30 @@ header{
 }
 .content img{
   max-width:100% !important;
+  min-width:100% !important;
 }
 .postheader{
   height: 300px;
   position: relative;
 }
-.backpost{
-  background-color: black;
-  opacity: 0.6;
-  z-index: 1;
+@media screen and (max-width: 480px) {
+  .postheader {
+    height: 200px;
+  }
 }
-.backpost>h3{
+.postheader>h3{
   position: absolute;
-  bottom: 0;
+  left:2rem;
+  bottom: 1rem;
   text-shadow: 0px 1px 4px #000;
+}
+.postheader::before{
+  position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    background-color:black;
+    opacity: 0.3;
+    width: 100%;
+    height: 100%;
 }
