--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -24,7 +24,7 @@
                 <ul class="nav nav-pills float-right" style="padding: 10px;">
                     <li class="nav-item"><a href="{% url 'blogHome'%}" class="nav-link active">首页</a></li>
                     {% for category in CategoryList %}
-                    <li class="nav-item"><a href="." class="nav-link">{{category.name}}</a></li>
+                    <li class="nav-item"><a href="{% url 'showCate' category.id %}" class="nav-link">{{category.name}}</a></li>
                     {% endfor %}
                 </ul>
             </nav>
@@ -41,7 +41,7 @@
             <div class="collapse navbar navbar-collapse" id="headlist">
                 <ul class="navbar-nav">
                     {% for category in CategoryList %}
-                    <li class="nav-item"><a href="." class="nav-link" style="color:rgba(0,0,0.9);">{{category.name}}</a></li>
+                    <li class="nav-item"><a href="{% url 'showCate' category.id %}" class="nav-link" style="color:rgba(0,0,0.9);">{{category.name}}</a></li>
                     {% endfor %}
                 </ul>
             </div>
@@ -51,7 +51,7 @@
     <div class="container">
         <!-- 主体 -->
         <div class="row tbody justify-content-between">
-            <div class="col-md-8">{% block content %}{% endblock %}</div>
+            <div class="col-md-9">{% block content %}{% endblock %}</div>
             <div class="col-md-3 d-none d-sm-block">{% include "blog/sidebar.html" %}</div>
         </div>
         <hr>
