添加查询分类文章页面功能

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -33,6 +33,7 @@
 <script>
     var ActivePage=parseInt("{{ActivePage}}");
     var TotalPage=parseInt("{{PageCount}}");
+    var ActiveCate=parseInt("{{CategoryId}}");
 </script>
 <script src="{% static 'blog/js/main.js' %}"></script>
 {% endblock %}
