--- a/blog/templates/blog/tag.html
+++ b/blog/templates/blog/tag.html
@@ -1,5 +1,34 @@
 {% extends "blog/layout.html" %}
 {% load static %}
 {% block content %}
-这是标签展示页面
+<div class="content">
+{% for article in ArticleList %}
+<article class="row">
+    <p><strong><a href="{% url 'showPost' article.id %}">{{article.title}}</a></strong></p>
+    <p class="info"><small><author><a href="">{{article.author.username}}</a></author><span> • </span><time>{{article.createTime}}</time>
+    </small>
+    </p>
+</article>
+{% endfor %}
+</div>
+<!-- 分页 -->
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" id="FrontPage">
+        <a class="page-link" href="#" tabindex="-1">上一页</a>
+      </li>
+      {% for page in PageCountList %}
+      <li id="{{page}}" class="page-item"><a class="page-link" href="./?page={{page}}">{{page}}</a></li>
+      {% endfor %}
+      <li class="page-item" id="BackPage">
+        <a class="page-link" href="#">下一页</a>
+      </li>
+    </ul>
+</nav>
+<script>
+    var ActivePage=parseInt("{{ActivePage}}");
+    var TotalPage=parseInt("{{PageCount}}");
+    var ActiveCate=parseInt("{{CategoryId}}");
+</script>
+<script src="{% static 'blog/js/main.js' %}"></script>
 {% endblock %}
