添加畅言评论插件

--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -33,7 +33,7 @@
         <!-- 移动端导航 -->
         <hgroup class="bg-light">
             <nav class="d-sm-none navbar navbar-light navbar-expand-md">
-                <a href="{% url 'blogHome'%}" class="navbar-brand">阿星的小站</a>
+                <a href="{% url 'blogHome'%}" class="navbar-brand">阿星的日记</a>
                 <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#headlist" aria-expanded="false" aria-controls="headlist">
                     <span class="navbar-toggler-icon"></span>
                 </button>                
