--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,7 +4,7 @@
 {% for article in ArticleList %}
 <article class="row content">
     <div class="col-5">
-        <a href="{% url 'showPost' article.id %}"><img src="{{article.cover}}" alt="{{article.title}}" class="img-thumbnail"></a>
+        <a href="{% url 'showPost' article.id %}"><img src="{{article.cover}}" alt="{{article.title}}" class="img-thumbnail" style="min-width: 100%;"></a>
     </div>
     <div class="col-7">
         <h5><strong><a href="{% url 'showPost' article.id %}">{{article.title}}</a></strong></h5>
