--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -13,6 +13,21 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <style>
+        .return_top{
+            position:fixed;
+            width:60px;
+            height:60px;
+            bottom:60px;
+            right:60px;
+            text-align:center;
+            line-height:60px;
+            text-decoration:none;
+            cursor:pointer;
+            opacity: 0.3;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <!-- 头部导航 -->
@@ -59,6 +74,28 @@
         <footer class="text-center">
             {% include "blog/footer.html" %}
         </footer>
+        <img src="https://img.icons8.com/dotty/80/000000/circled-up-2.png" alt="返回顶部" class="return_top">
     </div>
+    <script>
+        // 添加回到顶部按钮
+        //为当前窗口添加滚动条滚动事件（适用于所有可滚动的元素和 window 对象（浏览器窗口））
+        $(window).scroll(function(){
+            //创建一个变量存储当前窗口下移的高度
+            var scroTop = $(window).scrollTop();
+            //判断当前窗口滚动高度
+            //如果大于100，则显示顶部元素，否则隐藏顶部元素
+            if(scroTop>255){
+                $('.return_top').fadeIn(500);
+            }else{
+                $('.return_top').fadeOut(500);
+            }
+        });
+		    	
+        //为返回顶部元素添加点击事件
+        $('.return_top').click(function(){
+            //将当前窗口的内容区滚动高度改为0，即顶部
+            $("html,body").animate({scrollTop:0},"fast");
+        });
+    </script>
 </body>
 </html>
