--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -24,7 +24,9 @@ if (width < 960) {
 window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://cy-cdn.kuaizhan.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("http://cy-cdn.kuaizhan.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })(); </script>
 </article>
 <script>
+    // 设置封面
     $(".postheader").css({'background':'url({{article.cover}}) no-repeat','background-size':'cover','margin-bottom':'0px'});
+    // 设置当前分类
     var ActiveCate=parseInt("{{CategoryId}}");
     if (ActiveCate==0) {
         $("#index").addClass("active");
@@ -32,5 +34,6 @@ window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="tex
         var aid="cate"+ActiveCate.toString();
         $("#"+aid).addClass("active");
     }
+    
 </script>
 {% endblock %}
