准备创建文章页面

--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -9,7 +9,8 @@
                 <figcaption class="figure-caption text-center">
                     <form id="logoutForm" action="logout/" method="post" class="navbar-right">
                     {% csrf_token %}
-                        <a class="" type="submit" onclick="document.getElementById('logoutForm').submit()">退出</a>
+                        <a href="{% url 'createPost' %}" class='text-primary'>新文章</a>
+                        <a type="submit" onclick="document.getElementById('logoutForm').submit()">退出</a>
                     </form>
                 </figcaption>
             </figure>
