--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,39 +1,41 @@
 {% extends "blog/layout.html" %}
 {% load static %}
 {% block content %}
-{% for article in ArticleList %}
+{% for article in article_list %}
 <article class="row content">
-    <div class="col-5">
-        <a href="{% url 'showPost' article.id %}"><img src="{{article.cover}}" alt="{{article.title}}" class="img-thumbnail" style="min-width: 100%;"></a>
-    </div>
-    <div class="col-7">
-        <h5><strong><a href="{% url 'showPost' article.id %}">{{article.title}}</a></strong></h5>
-        <p class="info"><small><author><a href="">{{article.author.username}}</a></author><span> • </span><time>{{article.createTime}}</time>
-        </small>
-        </p>
-        <p class="d-none d-sm-block"><small>{{article.info}}......</small></p>
-    </div>
+  <div class="col-5">
+    <a href="{% url 'show_post' article.id %}"><img src="{{article.cover}}" alt="{{article.title}}"
+        class="img-thumbnail" style="min-width: 100%;"></a>
+  </div>
+  <div class="col-7">
+    <h5><strong><a href="{% url 'show_post' article.id %}">{{article.title}}</a></strong></h5>
+    <p class="info"><small>
+        <author><a href="">{{article.author.username}}</a></author><span> • </span><time>{{article.createTime}}</time>
+      </small>
+    </p>
+    <p class="d-none d-sm-block"><small>{{article.info}}......</small></p>
+  </div>
 </article>
 <br>
 {% endfor %}
 <!-- 分页 -->
 <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-      <li class="page-item" id="FrontPage">
-        <a class="page-link" href="#" tabindex="-1">上一页</a>
-      </li>
-      {% for page in PageCountList %}
-      <li id="{{page}}" class="page-item"><a class="page-link" href="./?page={{page}}">{{page}}</a></li>
-      {% endfor %}
-      <li class="page-item" id="BackPage">
-        <a class="page-link" href="#">下一页</a>
-      </li>
-    </ul>
+  <ul class="pagination justify-content-center">
+    <li class="page-item" id="FrontPage">
+      <a class="page-link" href="#" tabindex="-1">上一页</a>
+    </li>
+    {% for page in page_count_list %}
+    <li id="{{page}}" class="page-item"><a class="page-link" href="./?page={{page}}">{{page}}</a></li>
+    {% endfor %}
+    <li class="page-item" id="BackPage">
+      <a class="page-link" href="#">下一页</a>
+    </li>
+  </ul>
 </nav>
 <script>
-    var ActivePage=parseInt("{{ActivePage}}");
-    var TotalPage=parseInt("{{PageCount}}");
-    var ActiveCate=parseInt("{{CategoryId}}");
+  var ActivePage = parseInt("{{active_page}}");
+  var TotalPage = parseInt("{{page_count}}");
+  var ActiveCate = parseInt("{{category_id}}");
 </script>
 <script src="{% static 'blog/js/main.js' %}"></script>
 {% endblock %}
