--- a/blog/templates/blog/sidebar.html
+++ b/blog/templates/blog/sidebar.html
@@ -34,7 +34,7 @@
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <form action="" method="post">
+                            <form action="{% url 'login' %}" method="post">
                                 {% csrf_token %}
                                 <div class="form-group text-left">
                                     <label for="username">用户名：</label>
@@ -42,7 +42,7 @@
                                 </div>
                                 <div class="form-group text-left">
                                     <label for="pwd">密码：</label>
-                                    <input type="text" name="pwd" id="pwd" class="form-control" placeholder="请输入密码">
+                                    <input type="password" name="pwd" id="pwd" class="form-control" placeholder="请输入密码">
                                 </div>
                                 <button type="submit" class="btn btn-primary" name='login'>登录</button>
                             </form>
